--- a/app/src/main/res/layout/fragment_my_order_cash_on_delivery.xml
+++ b/app/src/main/res/layout/fragment_my_order_cash_on_delivery.xml
@@ -71,18 +71,31 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/buttonViewDeliveryStatus"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_button"
-        android:text="View delivery status"
-        android:textColor="@color/black"
+    <TextView
+        android:id="@+id/textViewLabelTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginStart="32dp"
+        android:text="Total Amount: RM"
+        android:textSize="28dp"
         android:textStyle="bold"
-        app:backgroundTint="#FDC12A"
+        app:layout_constraintBottom_toBottomOf="@+id/textView14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        app:layout_constraintVertical_bias="0.461" />
+
+    <TextView
+        android:id="@+id/textViewTotalAmount2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:text="0.00"
+        android:textSize="28dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        app:layout_constraintVertical_bias="0.47" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
