--- a/app/src/main/res/navigation/customer_navigation.xml
+++ b/app/src/main/res/navigation/customer_navigation.xml
@@ -23,8 +23,8 @@
             android:id="@+id/action_nav_myCart_customer_to_nav_creditCard_customer"
             app:destination="@id/nav_creditCard_customer" />
         <action
-            android:id="@+id/action_nav_myCart_customer_to_nav_placedOrder_customer"
-            app:destination="@id/nav_placedOrder_customer" />
+            android:id="@+id/action_nav_myCart_customer_to_nav_home_customer"
+            app:destination="@id/nav_home_customer" />
     </fragment>
     <fragment
         android:id="@+id/nav_aboutUs_customer"
@@ -47,15 +47,14 @@
             app:destination="@id/nav_view_all_recommended_customer2" />
     </fragment>
     <fragment
-        android:id="@+id/nav_placedOrder_customer"
-        android:name="tarc.edu.carpartsapp.Customer.PlacedOrderFragment"
-        android:label="Placed Order"
-        tools:layout="@layout/fragment_placed_order"/>
-    <fragment
         android:id="@+id/nav_creditCard_customer"
         android:name="tarc.edu.carpartsapp.Customer.CreditCardFragment"
         android:label="Credit Card Details"
-        tools:layout="@layout/fragment_credit_card"/>
+        tools:layout="@layout/fragment_credit_card">
+        <action
+            android:id="@+id/action_nav_creditCard_customer_to_nav_home_customer"
+            app:destination="@id/nav_home_customer" />
+    </fragment>
     <fragment
         android:id="@+id/nav_details_customer2"
         android:name="tarc.edu.carpartsapp.Customer.CarPartDetailsFragment"
